--- a/src/forms/EditGroupDlg.ui
+++ b/src/forms/EditGroupDlg.ui
@@ -8,135 +8,147 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>302</width>
-    <height>105</height>
+    <width>350</width>
+    <height>120</height>
    </rect>
+  </property>
+  <property name="sizePolicy" >
+   <sizepolicy>
+    <hsizetype>0</hsizetype>
+    <vsizetype>0</vsizetype>
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="minimumSize" >
    <size>
-    <width>302</width>
-    <height>105</height>
+    <width>350</width>
+    <height>120</height>
    </size>
   </property>
   <property name="maximumSize" >
    <size>
-    <width>302</width>
-    <height>105</height>
+    <width>350</width>
+    <height>120</height>
    </size>
   </property>
   <property name="windowTitle" >
    <string>Group Properties</string>
   </property>
-  <widget class="QLineEdit" name="EditTitle" >
-   <property name="geometry" >
-    <rect>
-     <x>70</x>
-     <y>10</y>
-     <width>230</width>
-     <height>21</height>
-    </rect>
+  <layout class="QVBoxLayout" >
+   <property name="margin" >
+    <number>9</number>
    </property>
-  </widget>
-  <widget class="QLabel" name="Label1" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>27</width>
-     <height>20</height>
-    </rect>
+   <property name="spacing" >
+    <number>6</number>
    </property>
-   <property name="text" >
-    <string>Title:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="Label2" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>43</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Icon:</string>
-   </property>
-  </widget>
-  <widget class="Line" name="line1" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>62</y>
-     <width>290</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="frameShape" >
-    <enum>QFrame::HLine</enum>
-   </property>
-   <property name="frameShadow" >
-    <enum>QFrame::Sunken</enum>
-   </property>
-   <property name="orientation" >
-    <enum>Qt::Horizontal</enum>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="ButtonOK" >
-   <property name="geometry" >
-    <rect>
-     <x>140</x>
-     <y>76</y>
-     <width>70</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>O&amp;K</string>
-   </property>
-   <property name="shortcut" >
-    <string>Alt+K</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="ButtonCancel" >
-   <property name="geometry" >
-    <rect>
-     <x>220</x>
-     <y>76</y>
-     <width>70</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>&amp;Cancel</string>
-   </property>
-   <property name="shortcut" >
-    <string>Alt+C</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="ComboIconPicker" >
-   <property name="geometry" >
-    <rect>
-     <x>68</x>
-     <y>37</y>
-     <width>62</width>
-     <height>26</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="Button_Icon" >
-   <property name="geometry" >
-    <rect>
-     <x>135</x>
-     <y>38</y>
-     <width>21</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>></string>
-   </property>
-  </widget>
+   <item>
+    <layout class="QGridLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item row="1" column="0" >
+      <widget class="QLabel" name="Label2" >
+       <property name="text" >
+        <string>Icon:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0" >
+      <widget class="QLabel" name="Label1" >
+       <property name="text" >
+        <string>Title:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1" >
+      <widget class="QComboBox" name="ComboIconPicker" />
+     </item>
+     <item row="1" column="3" >
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>172</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="0" column="1" colspan="3" >
+      <widget class="QLineEdit" name="EditTitle" />
+     </item>
+     <item row="1" column="2" >
+      <widget class="QToolButton" name="Button_Icon" >
+       <property name="text" >
+        <string>></string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="Line" name="line1" >
+     <property name="frameShape" >
+      <enum>QFrame::HLine</enum>
+     </property>
+     <property name="frameShadow" >
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="orientation" >
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>121</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="ButtonOK" >
+       <property name="text" >
+        <string>O&amp;K</string>
+       </property>
+       <property name="shortcut" >
+        <string>Alt+K</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="ButtonCancel" >
+       <property name="text" >
+        <string>&amp;Cancel</string>
+       </property>
+       <property name="shortcut" >
+        <string>Alt+C</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+  </layout>
  </widget>
  <layoutdefault spacing="6" margin="11" />
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
